Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.8-Beta 1
  FEATURES:
   * Added keyboard shortcuts for small 2 s seeks (Ctrl + Left/Right) and long 1 minute
     seeks (Shift + Left/Right) in addition to standard 10 s seeks. Durations are now
     configurable in amarokrc, see Amarok Handbook. Patch by Anmol Ahuja. (BR 177258)
   * Added support for files in Opus codec if Amarok is compiled against recent
     enough TagLib (post 1.8), patch by Martin Brodbeck. (BR 312905)
   * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)

  CHANGES:
   * On-Screen-Display now uses the system font instead of hardcoded sans-serif
     (BR 248707)
   * On-Screen-Display fades in/out smoothly.
   * Problematic support for treating MusicBrainz ids as track unique ids was dropped;
     should avoid surprising "Duplicate Tracks Found" errors. (BR 315329)
   * Fancy behavior of some context menus showing different actions when Shift
     key is held has been reverted. All entries are now shown all the time.
   * The dynamic playlist behaviour has changed. It will not longer
     generate "pretty good" playlists that do not fullfill the
     given biases. Instead it might add no song at all if given
     impossible to fullfill conditions.
   * The "tracks have been hidden in the playlist" warning when
     filtering the playlist is now displayed inside the playlist
     (BR 260352)
   * Update tag widget for Layout edit, filter edit, organize collection
     and guess tag dialog.
   * When fadeout and/or Replay Gain isn't possible, gray-out related UI
     elements in order not to fool users.

  BUGFIXES:
   * Clarify message when Last.fm streams are not available. (BR 315771)
   * Don't remove common labels when editing the tags of multiple tracks. (BR 316043)
   * Fix vertical positioning of On-Screen-Display. (BR 269788)
   * Prevent inability to save Last.fm password in corner cases. (BR 315306)